updates emc stuff

--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,3 +1,6 @@
 <!-- start custom footer snippets -->
+<p style="font-size:10px;">Disclaimer: Nothing on this website should be considered legal advice. You should always consult with a lawyer and/or a certification in regards to the proper method of remaining legally compliant in any aspect of business. Everything on this site should be considered anecdotal advice, and has no guarantee of being factually correct.
+</p>
+
 
 <!-- end custom footer snippets -->
